1. Upgrade from JDK 17 to JDK 21 (#9)
2. Upgrade Spring to 3.3.2
3. Upgrade Kafka to 3.2.2
4. Fix the warning for the source code for JDK 21